Add display properties

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
   <div class="banner">
-    <div class="img-flex">
-      <img>
+    <div >
+      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     </div>
     <div class="content">
-      <h2>Giant space moths invade Earth</<h2>
+      <h2>Giant space moths invade Earth</h2>
       <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
+  </div>
 </body>
 </html>
