--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>Hero banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </head>
 <body>
   <div class="banner">
-    <div >
+    <div>
       <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     </div>
     <div class="content">
-      <h2>Giant space moths invade Earth</h2>
+      <h2><span>Giant space moths invade Earth</span></h2>
       <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
   </div>
